--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -8,6 +8,11 @@
   url = "#about"
   weight = 10
 
+[[main]]
+  name = "Experiences"
+  url = "#experience"
+  weight = 20
+
 # [[main]]
 #   name = "Posts"
 #   url = "#posts"
@@ -23,10 +28,15 @@
   url = "#publications"
   weight = 40
 
-# [[main]]
-#   name = "Contact"
-#   url = "#contact"
-#   weight = 60
+[[main]]
+  name = "Misc."
+  url = "#misc"
+  weight = 60
+
+[[main]]
+  name = "Contact"
+  url = "#contact"
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
